@@ -1,5 +1,7 @@
 2006-05-25  David Reveman  <davidr@novell.com>
 
+	* plugins/compiz.schemas.in.in: Regen.
+
 	* src/window.c (moveResizeWindow): Don't adjust position for NorthWest
 	gravity. (bnc 178765) (fdo #6992)
 
